--- a/client/src/assets/styles/partials/_infographic.scss
+++ b/client/src/assets/styles/partials/_infographic.scss
@@ -1,3 +1,26 @@
+// Colors
+$tan: #EEE9DD;
+$brown: #635958;
+
+$lime: #99C329;
+
+$grayBlue: #84999E;
+$blueGray: #B9C7D1; // not used
+$turquoise: #49AEB6;
+$sea: #66A5B6;
+
+$lightgray: #E2E4E3;
+
+$orange: #DD9E35;
+$brick: #C33B0E;
+
+
+// Backgrounds
+$bg1: $tan;
+$bg2: $grayBlue;
+$bg3: $sea;
+$bg4: $tan;
+
 #intro, 
 #district-schools,
 #district-sections,
@@ -7,13 +30,18 @@
   position: fixed;
 
   .title {
+    font-size: 48px;
     text-align: center;
-    color: white;
+    color: $lime;
+    font-family: "Bevan";
+    font-weight: normal;
   }
 
   .section-title {
     text-align: center;
-    color: white;
+    font-family: "Bevan";
+    color: $grayBlue;
+    font-weight: normal;
   }
 
   .right { float: right; } 
@@ -21,7 +49,7 @@
 }
 
 #intro {
-  background-color: #333;
+  background-color: $bg1;
 
   $width: 600px;
 
@@ -29,62 +57,96 @@
     text-align: center;
     position: absolute;
     width: $width;
-    top: 40%;
+    top: 35%;
     left: 50%;
     margin-left: -$width / 2;
   }
   .content {
-    color: #ccc;
+    color: $brown;
   }
 }
 
 #district-schools {
-  background-color: #666;
+  background-color: $bg2;
 
   .container {}
 
   .legend {
     padding-top: 7px;
-    background-color: #333;
+    background-color: darken($grayBlue, 30%);
     overflow: hidden;
 
     svg {
       margin: 0 auto;
       display: block;
+
+      text {
+        fill: $tan !important;
+      }
     }
   }
 
   .chart-wrapper {
     position: absolute;
-    top: 30%;
+    top: 25%;
 
     .left {float: left}
     .right {float: right}
     .middle {
-      width: 200px;
+      width: 300px;
       margin: 0 auto;
+    }
+
+    svg text {
+      fill: $tan !important;
     }
   }
 
 }
 
 #district-sections {
-  background-color: #999;
+  background-color: $bg3;
 
   .span12 {
     position: absolute;
     top: 25%;
+
+    .section-title {
+      color: darken($grayBlue, 15%);
+    }
+
+    svg {
+      text.ratio {
+        fill: $bg3 !important;
+      }
+
+      text.desc {
+        fill: $tan;
+      }
+    } 
   }
 
   .chart-wrapper {}
 }
 
 #district-students {
-  background-color: #ccc;
+  background-color: $bg4;
+
+  .section-title {
+    color: $tan;
+    background-color: $brick;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 0;
+    margin: 0;
+    padding: 10px 0;
+    z-index: 10;
+  }
 
   .chart-wrapper {
     position: absolute;
-    top: 10%;
+    top: 12%;
 
     .right svg { float: right; }
   }
