working to make layout responsive and mobile friendly

--- a/client/src/app/home/templates/infographic.tpl.html
+++ b/client/src/app/home/templates/infographic.tpl.html
@@ -1,12 +1,16 @@
-<div class="infographic clever">
+<div id="skrollr-body" class="infographic clever">
 <div ng-controller="D3SimpleDataCtrl">
 
   <section id="intro"
     data-0="height:1000px; top:0px" 
     data-500="height:0px">
-    <div class="content-block">
-      <h1 class="title">Meet Your District</h1>
-      <p class="content">"Meet Your District" was a fun little project to merge some of the frameworks and libraries that I have been playing with or meaning to play with into a complete site. It utilizes NodeJS and ExpressJS on the backend, AngularJS on the frontend, D3JS to draw the charts, and Skrollr to produce the nifty parallax scrolling. The data used to generate the charts below was courtesy of the Clever API.</p>
+    <div class="container">
+      <div class="row">
+        <div class="content-block span12">
+          <h1 class="title">Meet Your District</h1>
+          <p class="content">"Meet Your District" was a fun little project to merge some of the frameworks and libraries that I have been playing with or meaning to play with into a complete site. It utilizes NodeJS and ExpressJS on the backend, AngularJS on the frontend, D3JS to draw the charts, and Skrollr to produce the nifty parallax scrolling. The data used to generate the charts below was courtesy of the Clever API.</p>
+        </div>
+      </div>
     </div>
   </section>
   
