--- a/client/src/assets/styles/main.scss
+++ b/client/src/assets/styles/main.scss
@@ -22,3 +22,10 @@ body {
 }
 
 @import "partials/infographic";
+
+@media (max-width: 767px) {
+  body {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+}
