--- a/client/src/assets/styles/partials/_infographic.scss
+++ b/client/src/assets/styles/partials/_infographic.scss
@@ -27,6 +27,7 @@ $bg4: $tan;
 #district-students {
   width: 100%;
   height: 100%;
+  max-height: 100%;
   position: fixed;
 
   .title {
@@ -43,9 +44,6 @@ $bg4: $tan;
     color: $grayBlue;
     font-weight: normal;
   }
-
-  .right { float: right; } 
-  .left { float: left; }
 }
 
 #intro {
@@ -56,10 +54,14 @@ $bg4: $tan;
   .content-block {
     text-align: center;
     position: absolute;
-    width: $width;
+    padding: 20px;
     top: 35%;
-    left: 50%;
-    margin-left: -$width / 2;
+
+    @media (min-width: 767px) {
+      margin-left: -$width / 2;
+      max-width: $width;
+      left: 50%;
+    }
   }
   .content {
     color: $brown;
@@ -88,17 +90,25 @@ $bg4: $tan;
 
   .chart-wrapper {
     position: absolute;
-    top: 25%;
 
-    .left {float: left}
-    .right {float: right}
-    .middle {
-      width: 300px;
-      margin: 0 auto;
+    svg {
+      display: block;
+      margin: 10px auto;
     }
 
     svg text {
       fill: $tan !important;
+    }
+
+    @media (min-width: 960px) {
+      top: 35%;
+
+      .left {float: left}
+      .right {float: right}
+      .middle {
+        width: 300px;
+        margin: 0 auto;
+      }
     }
   }
 
@@ -151,6 +161,30 @@ $bg4: $tan;
     margin: 0;
     padding: 10px 0;
     z-index: 10;
+  }
+
+  .fn, .ln {
+    font-size: 20px;
+    background: $bg4;
+    color: $grayBlue;
+    font-family: "Bevan";
+  }
+
+  .ln {
+    text-align: right;
+  }
+
+  .legend {
+    $width: 230px;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    margin-left: -$width/2;
+    width: $width;
+    font-size: 16px;
+    line-height: 30px;
+
+
   }
 
   .chart-wrapper {
