refactoring and expanding scope of the site

--- a/client/src/app/portfolio/templates/clever.tpl.html
+++ b/client/src/app/portfolio/templates/clever.tpl.html
@@ -1,4 +1,4 @@
-<div skrollr class="infographic clever">
+<div skrollr id="clever" class="infographic">
 <div ng-controller="D3SimpleDataCtrl">
 
   <section id="intro"
